--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -201,6 +201,8 @@ proxy:
     externalIPs: []
     loadBalancerIP:
     loadBalancerSourceRanges: []
+    ipFamilyPolicy: ""
+    ipFamilies: []
   # chp relates to the proxy pod, which is responsible for routing traffic based
   # on dynamic configuration sent from JupyterHub to CHP's REST API.
   chp:
