--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -44,7 +44,7 @@ hub:
       appProtocol:
     extraPorts: []
     loadBalancerIP:
-    ipFamilyPolicy: ""
+    ipFamilyPolicy: PreferDualStack
     ipFamilies: []
   baseUrl: /
   cookieSecret:
@@ -201,7 +201,7 @@ proxy:
     externalIPs: []
     loadBalancerIP:
     loadBalancerSourceRanges: []
-    ipFamilyPolicy: ""
+    ipFamilyPolicy: PreferDualStack
     ipFamilies: []
   # chp relates to the proxy pod, which is responsible for routing traffic based
   # on dynamic configuration sent from JupyterHub to CHP's REST API.
