--- a/jupyterhub/values.schema.yaml
+++ b/jupyterhub/values.schema.yaml
@@ -2421,25 +2421,26 @@ properties:
           extraVolumeMounts:
             type: [object, array]
             description: |
-              Configures `KubeSpawner.volume_mounts` dictionary. Can be a dictionary
-              or an array.
-              If it's an array, a combination of the volume name and its index is
-              used as the key while setting up the volume mount entry in
-              KubeSpawner.volume_mounts and the value is the volume mount
+              Injects extra volume mounts into `KubeSpawner.volume_mounts` dictionary.
+              Can be a dictionary or an array.
+              If it's an array, each item must be a volume mount configuration in k8s
+              native syntax. A combination of the volume name and its index is used as the key
+              in `KubeSpawner.volume_mounts` dictionary and the value is the volume mount
               configuration.
-              If it's a dictionary, the keys of the dictionary can be any descriptive
-              name for the volume mount and the value is the volume mount
-              configuration.
+              If `extraVolumeMounts` is defined as a dictionary, the keys of the dictionary
+              can be any descriptive name for the volume mount and the value is the volume mount
+              configuration in k8s native syntax.
           extraVolumes:
             type: [object, array]
             description: |
-              Configures `KubeSpawner.volumes` dictionary. Can be a dictionary or an
-              array.
-              If it's an array, the name of the volume is used as the key while
-              setting up the volume entry in KubeSpawner.volumes and the value is the
-              volume configuration.
-              If it's a dictionary, the keys of the dictionary can be any descriptive
-              name for the volume and the value is the volume configuration.
+              Injects extra volumes into `KubeSpawner.volumes` dictionary. Can be a dictionary
+              or an array.
+              If it's an array, each item must be volume configuration in k8s native
+              syntax. The name of the volume is used as the key in `KubeSpawner.volumes`
+              dictionary while the value is the volume configuration.
+              If `extraVolumes` is defined as a dictionary, the keys of the dictionary
+              can be any descriptive name for the volume and the value must be the volume
+              configuration in k8s native syntax.
           homeMountPath:
             type: string
             description: |
