--- a/chartpress.yaml
+++ b/chartpress.yaml
@@ -20,7 +20,7 @@ charts:
     #
     # baseVersion should be managed via tbump, see RELEASE.md for details
     #
-    baseVersion: "4.3.0"
+    baseVersion: "4.3.1-0.dev"
     repo:
       git: jupyterhub/helm-chart
       published: https://jupyterhub.github.io/helm-chart
