--- a/tbump.toml
+++ b/tbump.toml
@@ -5,7 +5,7 @@
 # Config reference: https://github.com/your-tools/tbump#readme
 #
 [version]
-current = "4.3.1"
+current = "4.3.2-0.dev"
 
 # match our prerelease prefixes
 # -alpha.1
