Set working directory for JupyterHub deployment
In case the image's default workingDir is not /srv/jupyterhub

--- a/jupyterhub/templates/hub/deployment.yaml
+++ b/jupyterhub/templates/hub/deployment.yaml
@@ -166,6 +166,7 @@ spec:
               {{- with .Values.hub.db.pvc.subPath }}
               subPath: {{ . | quote }}
               {{- end }}
+          workingDir: /srv/jupyterhub
             {{- end }}
           {{- with .Values.hub.resources }}
           resources:
