--- a/ci/traefik-config.yaml
+++ b/ci/traefik-config.yaml
@@ -12,7 +12,8 @@ spec:
       listeners:
         web:
           # -- Routes are restricted to namespace of the gateway [by default](https://gateway-api.sigs.k8s.io/reference/spec/#gateway.networking.k8s.io/v1.FromNamespaces
-          namespacePolicy: All
+          namespacePolicy:
+            from: All
     logs:
       access:
         enabled: true
