Set an empty default instead of a dict

--- a/jupyterhub/values.yaml
+++ b/jupyterhub/values.yaml
@@ -409,8 +409,8 @@ singleuser:
   storage:
     type: dynamic
     extraLabels: {}
-    extraVolumes: {}
-    extraVolumeMounts: {}
+    extraVolumes:
+    extraVolumeMounts:
     static:
       pvcName:
       subPath: "{username}"
