Set service name in HTTPRoute to match the proxy-public service name when using fullnameOverrides

--- a/jupyterhub/templates/httproute.yaml
+++ b/jupyterhub/templates/httproute.yaml
@@ -22,6 +22,6 @@ spec:
   {{- end }}
   rules:
     - backendRefs:
-        - name: proxy-public
+        - name: {{ include "jupyterhub.proxy-public.fullname" . }}
           port: 80
 {{- end }}
