Add namespace field to all namespaced resources and support namespaceOverride
{"fundingSource": "41201", "team": "FED.ICGSA.OPS.CP", "fshGit": "0c3ea19b", "fshDocker": "sha256:1b340a55"}

--- a/jupyterhub/templates/hub/deployment.yaml
+++ b/jupyterhub/templates/hub/deployment.yaml
@@ -2,6 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "jupyterhub.hub.fullname" . }}
+  namespace: {{ include "jupyterhub.namespace" . }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
 spec:
