--- a/jupyterhub/templates/image-pull-secret.yaml
+++ b/jupyterhub/templates/image-pull-secret.yaml
@@ -3,6 +3,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: {{ include "jupyterhub.image-pull-secret.fullname" . }}
+  namespace: {{ include "jupyterhub.namespace" . }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
   annotations:
