--- a/jupyterhub/templates/proxy/autohttps/serviceaccount.yaml
+++ b/jupyterhub/templates/proxy/autohttps/serviceaccount.yaml
@@ -6,6 +6,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "jupyterhub.autohttps-serviceaccount.fullname" . }}
+  namespace: {{ include "jupyterhub.namespace" . }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
 {{- end }}
