--- a/jupyterhub/templates/singleuser/secret.yaml
+++ b/jupyterhub/templates/singleuser/secret.yaml
@@ -3,6 +3,7 @@ kind: Secret
 apiVersion: v1
 metadata:
   name: {{ include "jupyterhub.singleuser.fullname" . }}
+  namespace: {{ include "jupyterhub.namespace" . }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
 type: Opaque
