--- a/jupyterhub/templates/image-puller/serviceaccount-continuous.yaml
+++ b/jupyterhub/templates/image-puller/serviceaccount-continuous.yaml
@@ -7,6 +7,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "jupyterhub.continuous-image-puller.fullname" . }}
+  namespace: {{ include "jupyterhub.namespace" . }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
   annotations:
