--- a/jupyterhub/templates/image-puller/serviceaccount.yaml
+++ b/jupyterhub/templates/image-puller/serviceaccount.yaml
@@ -7,6 +7,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "jupyterhub.hook-image-awaiter-serviceaccount.fullname" . }}
+  namespace: {{ include "jupyterhub.namespace" . }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
     hub.jupyter.org/deletable: "true"
