--- a/jupyterhub/templates/proxy/autohttps/configmap.yaml
+++ b/jupyterhub/templates/proxy/autohttps/configmap.yaml
@@ -17,6 +17,7 @@ kind: ConfigMap
 apiVersion: v1
 metadata:
   name: {{ include "jupyterhub.autohttps.fullname" . }}
+  namespace: {{ include "jupyterhub.namespace" . }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
 data:
