--- a/jupyterhub/templates/proxy/service.yaml
+++ b/jupyterhub/templates/proxy/service.yaml
@@ -9,6 +9,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "jupyterhub.proxy-api.fullname" . }}
+  namespace: {{ include "jupyterhub.namespace" . }}
   labels:
     {{- $_ := merge (dict "componentSuffix" "-api") . }}
     {{- include "jupyterhub.labels" $_ | nindent 4 }}
@@ -30,6 +31,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ include "jupyterhub.proxy-public.fullname" . }}
+  namespace: {{ include "jupyterhub.namespace" . }}
   labels:
     {{- $_ := merge (dict "componentSuffix" "-public") . }}
     {{- include "jupyterhub.labels" $_ | nindent 4 }}
