--- a/jupyterhub/templates/scheduling/user-scheduler/serviceaccount.yaml
+++ b/jupyterhub/templates/scheduling/user-scheduler/serviceaccount.yaml
@@ -4,6 +4,7 @@ apiVersion: v1
 kind: ServiceAccount
 metadata:
   name: {{ include "jupyterhub.user-scheduler-serviceaccount.fullname" . }}
+  namespace: {{ include "jupyterhub.namespace" . }}
   labels:
     {{- include "jupyterhub.labels" . | nindent 4 }}
   {{- with .Values.scheduling.userScheduler.serviceAccount.annotations }}
